cleaned debugging and unnecessary comments

--- a/notebooks/count-parameters.ipynb
+++ b/notebooks/count-parameters.ipynb
@@ -19,8 +19,8 @@
    ],
    "source": [
     "import sys\n",
-    "from MOE_TESTS.src.models import AdaptiveMoEWithSkip, Resnet18\n",
-    "from MOE_TESTS.src.utils import load_cifar10_with_stats"
+    "from src.models import AdaptiveMoEWithSkip, ResNet18\n",
+    "from src.utils import load_cifar10_with_stats"
    ]
   },
   {
